plugins {
    id 'checkstyle'
}

group 'cc.c1234'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

allprojects {
    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url 'https://maven.aliyun.com/nexus/content/groups/public/'
        }
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'idea'
    apply plugin: 'checkstyle'

    sourceCompatibility = 17
    group 'cc.c1234'
    version '2.0.0'

    checkstyle {
        toolVersion = '8.42'
        ignoreFailures = false
        maxWarnings = 0
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    ext {
        slf4jVersion = '1.7.28'
        jacksonVersion = '2.12.0'
        log4jVersion = '2.12.1'
        junitVersion = '4.12'
        zookeeperVersion = '3.4.6'
        curatorRecipesVersion = '4.2.0'
        guavaVersio = '27.0.1-jre'
        jfoenixVersion = '9.0.10'
        richtextfxVersion = '0.11.0'
        sshjVersion = '0.34.0'
        antlr4RuntimeVersion = '4.9.2'
        commonsIoVersion = '2.10.0'
        lombokVersion = '1.18.22'
        mapStructVersion = '1.5.3.Final'
    }

    dependencies {
        implementation group: 'org.slf4j', name: 'slf4j-api', version: "${slf4jVersion}"
        implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: "${log4jVersion}"
        implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: "${log4jVersion}"
        implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: "${log4jVersion}"
        testImplementation group: 'junit', name: 'junit', version: "${junitVersion}"

        constraints {
            implementation group: 'commons-io', name: 'commons-io', version: "${commonsIoVersion}"
            implementation group: 'com.hierynomus', name: 'sshj', version: "${sshjVersion}"
            implementation group: 'org.fxmisc.richtext', name: 'richtextfx', version: "${richtextfxVersion}"
            implementation group: 'com.jfoenix', name: 'jfoenix', version: "${jfoenixVersion}"
            implementation "com.google.guava:guava:${guavaVersio}"
            implementation group: 'org.antlr', name: 'antlr4-runtime', version: "${antlr4RuntimeVersion}"
            api("org.apache.zookeeper:zookeeper:${zookeeperVersion}") {
                force = true
            }
            implementation "org.apache.curator:curator-recipes:${curatorRecipesVersion}"
            implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: "${jacksonVersion}"
            implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: "${jacksonVersion}"
            implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "${jacksonVersion}"
            implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: "${jacksonVersion}"

            compileOnly "org.projectlombok:lombok:${lombokVersion}"
            annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        }
    }
}
